few correction in dashboard spacing

--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -56,9 +56,7 @@
     border: 3px solid var(--activity-color);
 }
 
-.h-130px{
-    height: 140px;
-}
+
 
 
 
@@ -112,4 +110,9 @@
 .icon-span{
     width: 40px;
     height: 40px;
+}
+@media (min-width:576px) {
+    .h-130px{
+        height: 140px;
+    }
 }
